# kleiner-brauhelfer-app

./: .gitignore
.github/workflows/: android-build.yaml  android-qt-6.10.yml  build-android.yml  build_android.yml
kleiner-brauhelfer-app/: CMakeLists.txt  kleiner-brauhelfer-app.pro
kleiner-brauhelfer-app/android/: AndroidManifest.xml
kleiner-brauhelfer-app/android/res/drawable/: ic_launcher_foreground.xml
kleiner-brauhelfer-app/android/src/org/kleinerbrauhelfer/app/: PathUtil.java
kleiner-brauhelfer-app/qml/: Footer.qml  Header.qml  NavMenu.qml  main.qml
kleiner-brauhelfer-app/qml/common/: PopupRestextrakt.qml  TextFieldSre.qml
kleiner-brauhelfer-app/qml/pagesGlobal/: PageGlobalAuswahl.qml
kleiner-brauhelfer-app/qml/pagesOthers/: PageSettings.qml
kleiner-brauhelfer-app/qml/pagesSud/: PageSudAbfuellen.qml  PageSudBewertung.qml  PageSudBrauen.qml  PageSudGaerung.qml  PageSudGaerverlauf_1.qml  PageSudGaerverlauf_2.qml  PageSudGaerverlauf_3.qml  PageSudHome.qml  PageSudInfo.qml
kleiner-brauhelfer-app/qml/pagesTools/: PageToolBieranalyse.qml
kleiner-brauhelfer-app/src/: main.cpp  qmlutils.cpp  syncservicedropbox.cpp  syncservicegoogle.cpp  syncservicelocal.cpp
kleiner-brauhelfer-core/: CMakeLists.txt  kleiner-brauhelfer-core.pro
